# ttkbootstrap-next

./: AGENTS.md  README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
architecture/: backwards-compatability.md  color-system.md  color.md  flexbox-layout.md  layout.md  layouts.md  library-structure.md  lists.md  menu-list.md  minimum-compat-plan.md  structure.txt  typography.md
cookbook/: animated_gif.py  validate_user_input.py
design/: data-provider.md  typography.md
development/filedialogs/: filedialog_methods.py
development/validatedinput/: inputgroup.py
docs/: event-binding-and-streams.md  icons.md  layout-system.md  signals.md  style-system.md  validation-system.md
docs/en/gallery/: dataentry.md  equalizer.md  filesearchengine.md  magicmouse.md  mediaplayer.md  stopwatch.md  textreader.md
docs/ja/cookbook/: gif-animation.md  validate-user-input.md
docs/ja/gallery/: calculator.md  collapsingframe.md  filebackup.md  pccleaner.md
docs/ja/gettingstarted/: tutorial.md
docs/zh/cookbook/: gif-animation.md  validate-user-input.md
docs/zh/gallery/: calculator.md  collapsingframe.md  dataentry.md  equalizer.md  filebackup.md  filesearchengine.md  magicmouse.md  mediaplayer.md  pccleaner.md  stopwatch.md  textreader.md
docs/zh/gettingstarted/: tutorial.md
docs_scripts/tutorial/: button_colors.py  simple_usage.py  solid_outline_button_styles.py
docs_scripts/widget_styles/: available_colors.py  button_style.py  checkbutton_style.py  combo_style.py  date_entry.py  entry_style.py  floodgauge_style.py  frame_style.py  label_style.py  labelframe_style.py  menubutton_style.py  meter_style.py  notebook_style.py  panedwindow_style.py  progressbar_style.py  radiobutton_style.py  scale_style.py  scrollbar_style.py  separator_style.py  sizegrip_style.py  spinbox_style.py  treeview_style.py
gallery/: back_me_up.py  calculator.py  collapsing_frame.py  data_entry.py  equalizer.py  everything_bagel.py  file_search_engine.py  long_running_determinate.py  long_running_indeterminate.py  magic_mouse.py  media_player.py  pc_cleaner.py  stopwatch.py  text_reader.py
src/ttkbootstrap/: __init__.py  __main__.py  _version.py  app.py  events.py  types.py  utils.py
src/ttkbootstrap/app/: __init__.py  style.py  widget.py
src/ttkbootstrap/common/: __init__.py  types.py  utils.py
src/ttkbootstrap_next/: __init__.py  _version.py  utils.py
tests/: demo_app.py  demo_background.py  demo_badge.py  demo_button.py  demo_canvas.py  demo_check_button.py  demo_checkbutton.py  demo_comobox.py  demo_datasource.py  demo_date_entry.py  demo_entry_part.py  demo_expander.py  demo_fieldset.py  demo_file_entry.py  demo_flexbox.py  demo_font.py  demo_formfield.py  demo_grid.py  demo_grid_layout.py  demo_id_lookup.py  demo_label.py  demo_label_icon.py  demo_legacy_layout.py  demo_list_row_factory.py  demo_listbox.py  demo_menu_item.py  demo_native_menu.py  demo_normalize_icon_position.py  demo_notebook.py  demo_number_entry.py  demo_optimize_events.py  demo_pack.py  demo_pack_layout.py  demo_page_stack.py  demo_paned_window.py  demo_password_entry.py  demo_path_entry.py  demo_place.py  demo_progress.py  demo_progressbar.py  (+29 more)
tests/features/: icons.py
tests/research/: dev_cascading_menu.py  dev_error_checking.py  dev_positioning_popup.py
tests/visual/: demo_datasource.py  demo_date_entry.py  demo_entry_part.py  demo_id_lookup.py  demo_menu_item.py  demo_notebook.py  demo_number_entry.py  demo_page_stack.py  demo_path_entry.py  demo_place.py  demo_progressbar.py  demo_scale.py  demo_scrollview.py  demo_separator.py  demo_simple_list.py  demo_sizegrip.py  demo_switch_button.py  demo_transparency.py  demo_typography.py  demo_virtual_listbox.py
(+497 files in other folders)
