[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ttkbootstrap-next"
dynamic = ["version"]
description = "Next-generation theming and layout engine for Tkinter with modern, declarative APIs."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Israel Dryer", email = "israel.dryer@gmail.com" }
]
keywords = [
    "tkinter", "theme", "ttk", "bootstrap", "gui", "desktop", "python3",
    "ui", "widgets", "theming", "cross-platform", "modern",
    "responsive", "python-gui"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Operating System :: OS Independent"
]
dependencies = [
    "pillow>=10",
    "babel>=2.15.0"
]

[project.urls]
Homepage = "https://github.com/israel-dryer/ttkbootstrap-next"
Issues = "https://github.com/israel-dryer/ttkbootstrap-next/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
license-files = ["LICENSE", "LICENSE.*"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
ttkbootstrap_next = [
    "localization/msgs/*.msg",
    "themes/*.json",
    "themes/*.toml",
    "assets/**/*"
]

# setuptools-scm: write an importable version file for runtime introspection
[tool.setuptools_scm]
write_to = "src/ttkbootstrap_next/_version.py"
fallback_version = "0.1.0"
